--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
     <div class="sidebar-heading">Wilson Joe</div>
     <div class="list-group list-group-flush">
       <a href="profile/profile" class="list-group-item list-group-item-action bg-light">Profile</a>
-      <a href="profile/maze-solver" class="list-group-item list-group-item-action bg-light">Maze Creator</a>
+      <a href="profile/maze-creator" class="list-group-item list-group-item-action bg-light">Maze Creator</a>
     </div>
   </div>
 
