--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,8 +2,8 @@
   <div class="bg-light border-right" id="sidebar-wrapper">
     <div class="sidebar-heading">Wilson Joe</div>
     <div class="list-group list-group-flush">
-      <a href="/profile" class="list-group-item list-group-item-action bg-light">Profile</a>
-      <a href="/maze-creator" class="list-group-item list-group-item-action bg-light">Maze Creator</a>
+      <a routerLink="/profile" class="list-group-item list-group-item-action bg-light">Profile</a>
+      <a routerLink="/maze-creator" class="list-group-item list-group-item-action bg-light">Maze Creator</a>
     </div>
   </div>
 
